--- a/about.html
+++ b/about.html
@@ -18,14 +18,14 @@
 <body>
     <!-- Navigation bar -->
     <section id="header">
-        <a href="#"><img src="/images/logo1.png" class="logo" style="width: 5%;" alt="Logo"></a>
+        <a href="#"><img src="./images/logo1.png" class="logo" style="width: 5%;" alt="Logo"></a>
         <!-- <h1>Limbro</h1> -->
         <div id="navbar-section">
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="feature.html">Feature</a></li>
+                <li><a href="cart.html">Feature</a></li>
                 <li><a class="active" href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="cart.html" id="lg-bag"><i class="fas fa-shopping-bag"></i></a></li>
@@ -41,11 +41,11 @@
     <!-- Hero section -->
     <section id="page-header" class="about-header">
         <h2>#KnowUs</h2>
-        <p>Read all ca</p>
+        <p>Read all about us</p>
     </section>
 
     <section id="about-head" class="section-p1">
-        <img src="/images/abtus1.jpg" alt="">
+        <img src="./images/abtus1.jpg" alt="">
         <div>
             <h2>Who we are</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ipsum eligendi, accusantium placeat
@@ -67,7 +67,7 @@
     <section id="about-app" class="section-p1">
         <h1>Download Our <a href="#">App</a></h1>
         <div class="video">
-            <video autoplay muted loop src="/images/video1.mp4"></video>
+            <video autoplay muted loop src="./images/video1.mp4"></video>
         </div>
 
     </section>
@@ -75,27 +75,27 @@
      <!-- Feature -->
      <section id="feature" class="section-p1">
         <div class="fe-box">
-            <img src="/images/feature2.jpg" class="img1" alt="">
+            <img src="./images/feature2.jpg" class="img1" alt="">
             <h6>Free Shipping</h6>
         </div>
         <div class="fe-box">
-            <img src="/images/feature1.jpeg" class="img1" alt="">
+            <img src="./images/feature1.jpeg" class="img1" alt="">
             <h6>Free Shipping</h6>
         </div>
         <div class="fe-box">
-            <img src="/images/feature3.png" class="img1" alt="">
+            <img src="./images/feature3.png" class="img1" alt="">
             <h6>Free Shipping</h6>
         </div>
         <div class="fe-box">
-            <img src="/images/feature4.png" class="img1" alt="">
+            <img src="./images/feature4.png" class="img1" alt="">
             <h6>Free Shipping</h6>
         </div>
         <div class="fe-box">
-            <img src="/images/feature2.jpg" class="img1" alt="">
+            <img src="./images/feature2.jpg" class="img1" alt="">
             <h6>Free Shipping</h6>
         </div>
         <div class="fe-box">
-            <img src="/images/feature2.jpg" class="img1" alt="">
+            <img src="./images/feature2.jpg" class="img1" alt="">
             <h6>Free Shipping</h6>
         </div>
     </section>
@@ -116,7 +116,7 @@
     <!-- Footer -->
     <footer class="section-p1">
         <div class="col">
-            <img src="/images/logo1.png" class="logo" alt="">
+            <img src="./images/logo1.png" class="logo" alt="">
             <h4>Contact</h4>
             <p><strong>Address: </strong>562 Welliington Road, San Franscisco</p>
             <p><strong>Phone: </strong>+1 2222 365/(+91) 01 2345 6789</p>
@@ -152,11 +152,11 @@
             <h4>Install App</h4>
             <p>From App store or Google play store</p>
             <div class="row">
-                <img src="/images/playstore.png" style="width:20%;" alt="">
-                <img src="/images/appstore.png" style="width:20%;" alt="">
+                <img src="./images/playstore.png" style="width:20%;" alt="">
+                <img src="./images/appstore.png" style="width:20%;" alt="">
             </div>
             <p>Secure payment gateways</p>
-            <img src="/images/payment.png" style="width:40%;" alt="">
+            <img src="./images/payment.png" style="width:40%;" alt="">
         </div>
         <div class="copyright">
             <p>© Limbro 2003-2022</p>
