--- a/blog.html
+++ b/blog.html
@@ -17,14 +17,14 @@
 <body>
     <!-- Navigation bar -->
     <section id="header">
-        <a href="#"><img src="/images/logo1.png" class="logo" style="width: 5%;" alt="Logo"></a>
+        <a href="#"><img src="./images/logo1.png" class="logo" style="width: 5%;" alt="Logo"></a>
         <!-- <h1>Limbro</h1> -->
         <div id="navbar-section">
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a class="active" href="blog.html">Blog</a></li>
-                <li><a href="feature.html">Feature</a></li>
+                <li><a href="cart.html">Feature</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="cart.html" id="lg-bag"><i class="fas fa-shopping-bag"></i></a></li>
@@ -47,7 +47,7 @@
     <section id="blog">
         <div class="blog-box">
             <div class="blog-img">
-                <img src="/images/blog1.jpg" alt="">
+                <img src="./images/blog1.jpg" alt="">
             </div>
             <div class="blog-details">
                 <h4>The cotton-jersey zip-up hoodie</h4>
@@ -61,7 +61,7 @@
         </div>
         <div class="blog-box">
             <div class="blog-img">
-                <img src="/images/blog2.jpg" alt="">
+                <img src="./images/blog2.jpg" alt="">
             </div>
             <div class="blog-details">
                 <h4>The cotton-jersey zip-up hoodie</h4>
@@ -75,7 +75,7 @@
         </div>
         <div class="blog-box">
             <div class="blog-img">
-                <img src="/images/blog3.jpg" alt="">
+                <img src="./images/blog3.jpg" alt="">
             </div>
             <div class="blog-details">
                 <h4>The cotton-jersey zip-up hoodie</h4>
@@ -89,7 +89,7 @@
         </div>
         <div class="blog-box">
             <div class="blog-img">
-                <img src="/images/blog4.jpg" alt="">
+                <img src="./images/blog4.jpg" alt="">
             </div>
             <div class="blog-details">
                 <h4>The cotton-jersey zip-up hoodie</h4>
@@ -103,7 +103,7 @@
         </div>
         <div class="blog-box">
             <div class="blog-img">
-                <img src="/images/blog5.jpg" alt="">
+                <img src="./images/blog5.jpg" alt="">
             </div>
             <div class="blog-details">
                 <h4>The cotton-jersey zip-up hoodie</h4>
@@ -138,16 +138,10 @@
         </div>
     </section>
 
-    <div class=" background">
-        <img class="car" src="/images/car.png" alt="">
-        <img class="motorbike" src="/images/motobike.png" alt="">
-
-    </div>
-
     <!-- Footer -->
     <footer class="section-p1">
         <div class="col">
-            <img src="/images/logo1.png" class="logo" alt="">
+            <img src="./images/logo1.png" class="logo" alt="">
             <h4>Contact</h4>
             <p><strong>Address: </strong>562 Welliington Road, San Franscisco</p>
             <p><strong>Phone: </strong>+1 2222 365/(+91) 01 2345 6789</p>
@@ -183,11 +177,11 @@
             <h4>Install App</h4>
             <p>From App store or Google play store</p>
             <div class="row">
-                <img src="/images/playstore.png" style="width:20%;" alt="">
-                <img src="/images/appstore.png" style="width:20%;" alt="">
+                <img src="./images/playstore.png" style="width:20%;" alt="">
+                <img src="./images/appstore.png" style="width:20%;" alt="">
             </div>
             <p>Secure payment gateways</p>
-            <img src="/images/payment.png" style="width:40%;" alt="">
+            <img src="./images/payment.png" style="width:40%;" alt="">
         </div>
         <div class="copyright">
             <p>© Limbro 2003-2022</p>
