--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="feature.html">Feature</a></li>
+                <li><a href="cart.html">Feature</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <!-- <li><a href="/user-profile/index.html">Sign in</a></li> -->
@@ -82,7 +82,7 @@
         <p>Summer Collection New Design</p>
         <div class="pro-container">
             <div class="pro">
-                <img src="../images/1.jpg" alt="">
+                <img src="./images/1.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -356,7 +356,10 @@
         </div>
 
     </section>
-    
+    <!-- @#$Password224@#$ 
+        smtpserver = smtp.office365.com
+        lizbiz821@outlook.com
+    -->
     <!-- Small Banner -->
     <section id="sm-banner" class="section-p1">
         <div class="banner-box">
