--- a/s-product.html
+++ b/s-product.html
@@ -23,7 +23,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="feature.html">Feature</a></li>
+                <li><a href="cart.html">Feature</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li>
