--- a/shop.html
+++ b/shop.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navigation bar -->
     <section id="header">
-        <a href="#"><img src="/images/logo1.png" class="logo" style="width: 5%;" alt="Logo"></a>
+        <a href="#"><img src="./images/logo1.png" class="logo" style="width: 5%;" alt="Logo"></a>
         <!-- <h1>Limbro</h1> -->
         <div id="navbar-section">
             <ul id="navbar">
@@ -46,7 +46,7 @@
         <h2>Male wears</h2>
         <div class="pro-container">  
             <div class="pro" onclick="window.location.href='s-product.html';">
-                <img src="/images/57.jpg" alt="">
+                <img src="./images/57.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -62,7 +62,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/56.jpg" alt="">
+                <img src="./images/56.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -78,7 +78,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/27.jpg" alt="">
+                <img src="./images/27.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -94,7 +94,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/19.jpg" alt="">
+                <img src="./images/19.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -110,7 +110,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/14.jpg" alt="">
+                <img src="./images/14.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -126,7 +126,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/9.jpg" alt="">
+                <img src="./images/9.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -142,7 +142,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/26.jpg" alt="">
+                <img src="./images/26.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -158,7 +158,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/4.jpg" alt="">
+                <img src="./images/4.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -174,7 +174,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/14.jpg" alt="">
+                <img src="./images/14.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -190,7 +190,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/9.jpg" alt="">
+                <img src="./images/9.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -206,7 +206,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/26.jpg" alt="">
+                <img src="./images/26.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -222,7 +222,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/4.jpg" alt="">
+                <img src="./images/4.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -242,7 +242,7 @@
         <h2>Female wears</h2>
         <div class="pro-container">
             <div class="pro">
-                <img src="/images/11.jpg" alt="">
+                <img src="./images/11.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -258,7 +258,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/20.jpg" alt="">
+                <img src="./images/20.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -274,7 +274,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/38.jpg" alt="">
+                <img src="./images/38.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -290,7 +290,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/34.jpg" alt="">
+                <img src="./images/34.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -306,7 +306,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/39.jpg" alt="">
+                <img src="./images/39.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -322,7 +322,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/35.jpg" alt="">
+                <img src="./images/35.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -338,7 +338,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/12.jpg" alt="">
+                <img src="./images/12.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -354,7 +354,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/52.jpg" alt="">
+                <img src="./images/52.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -375,7 +375,7 @@
         <h2>Bags</h2>
         <div class="pro-container">
             <div class="pro">
-                <img src="/images/11.jpg" alt="">
+                <img src="./images/11.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -391,7 +391,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/20.jpg" alt="">
+                <img src="./images/20.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -407,7 +407,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/38.jpg" alt="">
+                <img src="./images/38.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -423,7 +423,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/34.jpg" alt="">
+                <img src="./images/34.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -439,7 +439,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/39.jpg" alt="">
+                <img src="./images/39.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -455,7 +455,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/35.jpg" alt="">
+                <img src="./images/35.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -471,7 +471,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/12.jpg" alt="">
+                <img src="./images/12.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -487,7 +487,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/52.jpg" alt="">
+                <img src="./images/52.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -508,7 +508,7 @@
         <h2>Shoes</h2>
         <div class="pro-container">
             <div class="pro">
-                <img src="/images/11.jpg" alt="">
+                <img src="./images/11.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -524,7 +524,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/20.jpg" alt="">
+                <img src="./images/20.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -540,7 +540,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/38.jpg" alt="">
+                <img src="./images/38.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -556,7 +556,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/34.jpg" alt="">
+                <img src="./images/34.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -572,7 +572,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/39.jpg" alt="">
+                <img src="./images/39.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -588,7 +588,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/35.jpg" alt="">
+                <img src="./images/35.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -604,7 +604,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/12.jpg" alt="">
+                <img src="./images/12.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -620,7 +620,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i> </a>
             </div>
             <div class="pro">
-                <img src="/images/52.jpg" alt="">
+                <img src="./images/52.jpg" alt="">
                 <div class="des">
                     <span>Addidas</span>
                     <h5>Cartoon Astronaut T-shirt</h5>
@@ -663,7 +663,7 @@
     <!-- Footer -->
     <footer class="section-p1">
         <div class="col">
-            <img src="/images/logo1.png" class="logo" alt="">
+            <img src="./images/logo1.png" class="logo" alt="">
             <h4>Contact</h4>
             <p><strong>Address: </strong>562 Welliington Road, San Franscisco</p>
             <p><strong>Phone: </strong>+1 2222 365/(+91) 01 2345 6789</p>
@@ -699,11 +699,11 @@
             <h4>Install App</h4>
             <p>From App store or Google play store</p>
             <div class="row" >
-                <img src="/images/playstore.png" style="width:20%;"  alt="">
-                <img src="/images/appstore.png"  style="width:20%;" alt="">
+                <img src="./images/playstore.png" style="width:20%;"  alt="">
+                <img src="./images/appstore.png"  style="width:20%;" alt="">
             </div>
             <p>Secure payment gateways</p>
-            <img src="/images/payment.png" style="width:40%;" alt="">
+            <img src="./images/payment.png" style="width:40%;" alt="">
         </div>
         <div class="copyright">
             <p>© Limbro 2003-2022</p>
