--- a/cart.html
+++ b/cart.html
@@ -18,14 +18,14 @@
 <body>
     <!-- Navigation bar -->
     <section id="header">
-        <a href="#"><img src="/images/logo1.png" class="logo" style="width: 5%;" alt="Logo"></a>
+        <a href="#"><img src="./images/logo1.png" class="logo" style="width: 5%;" alt="Logo"></a>
         <!-- <h1>Limbro</h1> -->
         <div id="navbar-section">
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="feature.html">Feature</a></li>
+                <li><a href="cart.html">Feature</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a class="active" href="cart.html" id="lg-bag"><i class="fas fa-shopping-bag"></i></a></li>
@@ -59,7 +59,7 @@
             <tbody>
                 <tr>
                     <td><a href="#"><i class="far fa-times-circle"></i></a></td>
-                    <td><img src="/images/57.jpg" alt=""></td>
+                    <td><img src="./images/57.jpg" alt=""></td>
                     <td>Cartoon Astronaut T-shirt</td>
                     <td>$118.00</td>
                     <td><input type="number" name="" id="" value="1"></td>
@@ -67,7 +67,7 @@
                 </tr>
                 <tr>
                     <td><a href="#"><i class="far fa-times-circle"></i></a></td>
-                    <td><img src="/images/9.jpg" alt=""></td>
+                    <td><img src="./images/9.jpg" alt=""></td>
                     <td>Cartoon Astronaut T-shirt</td>
                     <td>$118.00</td>
                     <td><input type="number" name="" id="" value="1"></td>
@@ -75,7 +75,7 @@
                 </tr>
                 <tr>
                     <td><a href="#"><i class="far fa-times-circle"></i></a></td>
-                    <td><img src="/images/14.jpg" alt=""></td>
+                    <td><img src="./images/14.jpg" alt=""></td>
                     <td>Cartoon Astronaut T-shirt</td>
                     <td>$118.00</td>
                     <td><input type="number" name="" id="" value="1"></td>
@@ -119,7 +119,7 @@
     <!-- Footer -->
     <footer class="section-p1">
         <div class="col">
-            <img src="/images/logo1.png" class="logo" alt="">
+            <img src="./images/logo1.png" class="logo" alt="">
             <h4>Contact</h4>
             <p><strong>Address: </strong>562 Welliington Road, San Franscisco</p>
             <p><strong>Phone: </strong>+1 2222 365/(+91) 01 2345 6789</p>
@@ -155,11 +155,11 @@
             <h4>Install App</h4>
             <p>From App store or Google play store</p>
             <div class="row">
-                <img src="/images/playstore.png" style="width:20%;" alt="">
-                <img src="/images/appstore.png" style="width:20%;" alt="">
+                <img src="./images/playstore.png" style="width:20%;" alt="">
+                <img src="./images/appstore.png" style="width:20%;" alt="">
             </div>
             <p>Secure payment gateways</p>
-            <img src="/images/payment.png" style="width:40%;" alt="">
+            <img src="./images/payment.png" style="width:40%;" alt="">
         </div>
         <div class="copyright">
             <p>© Limbro 2003-2022</p>
